@@ -22,6 +22,10 @@
 #ifndef MICROBLAZE_DIS_H
 #define MICROBLAZE_DIS_H 1
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 extern enum microblaze_instr microblaze_decode_insn (long, int *, int *, 
 						     int *, int *);
 extern unsigned long microblaze_get_target_address (long, bfd_boolean, int,
@@ -30,5 +34,9 @@ extern unsigned long microblaze_get_target_address (long, bfd_boolean, int,
 extern enum microblaze_instr get_insn_microblaze (long, bfd_boolean *, 
 						  enum microblaze_instr_type *,
   		     				  short *);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* microblaze-dis.h */
