@@ -1,3 +1,7 @@
+2015-02-19  Pedro Alves  <palves@redhat.com>
+
+	* microblaze-dis.h [__cplusplus]: Wrap in extern "C".
+
 2015-02-10  Pedro Alves  <palves@redhat.com>
 	    Tom Tromey  <tromey@redhat.com>
 
